|
Quick Lists
|
|
Bug ID:
|
6681577
|
|
Votes
|
0
|
|
Synopsis
|
PIT: nsk/regression/b4675027 fails with -XX:+AggressiveOpts in hs12 b02
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
b02
|
|
Release Fixed
|
hs13(b01)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6636352
|
|
Submit Date
|
28-MAR-2008
|
|
Description
|
nsk/jdwp/ReferenceType/ConstantPool/constantPool001
nsk/logging/Handler/getEncoding/gtencd001
nsk/logging/Handler/getEncoding/gtencd002
nsk/logging/Handler/setEncoding/stencd001
nsk/logging/StreamHandler/setEncoding/setencod001
regression/jit/4131426/CollationKeyTest
nsk/regression/b4675027
nsk/regression/b4477225
fail with -XX:+AggressiveOpts in -server -Xcomp mode on sparc/sparcv9.
The failure reasons are following:
java.lang.ArrayIndexOutOfBoundsException
java.nio.BufferOverflowException
These failures don't relate to the latest changes in escape analysis (-XX:-DoEscapeAnalysis doesn't help).
Can't reproduce with HS10.0-b19.
Also, I couldn't reproduce nsk/regression/b4477225 failure on vm-v240-01.sfbay, but it always fails on vm-v215- customer .sfbay
Results:
/net/sqenfs-1.sfbay/export1/comp/vm/misc/results/vm/gtee/JDK_PERFORMANCE/PROMOTION/VM/6u5p/2008-03-21/AggressiveOpts/vm/solaris-sparcv9/server/comp/vm-solaris-sparcv9_server_comp_nsk.jdwp.testlist2008-03-24-19-53-41/ResultDir/constantPool001
/net/sqenfs-1.sfbay/export1/comp/vm/misc/results/vm/gtee/JDK_PERFORMANCE/PROMOTION/VM/6u5p/2008-03-21/AggressiveOpts/vm/solaris-sparcv9/server/comp/vm-solaris-sparcv9_server_comp_nsk.logging.testlist2008-03-24-20-00-14/ResultDir/gtencd001
/net/sqenfs-1.sfbay/export1/comp/vm/misc/results/vm/gtee/JDK_PERFORMANCE/PROMOTION/VM/6u5p/2008-03-21/AggressiveOpts/vm/solaris-sparcv9/server/comp/vm-solaris-sparcv9_server_comp_nsk.logging.testlist2008-03-24-20-00-14/ResultDir/stencd001
/net/sqenfs-1.sfbay/export1/comp/vm/misc/results/vm/gtee/JDK_PERFORMANCE/PROMOTION/VM/6u5p/2008-03-21/AggressiveOpts/vm/solaris-sparcv9/server/comp/vm-solaris-sparcv9_server_comp_nsk.logging.testlist2008-03-24-20-00-14/ResultDir/setencod001
/net/sqenfs-1.sfbay/export1/comp/vm/misc/results/vm/gtee/JDK_PERFORMANCE/PROMOTION/VM/6u5p/2008-03-21/AggressiveOpts/vm/solaris-sparc/server/comp/vm-solaris-sparc_server_comp_nsk.regression.testlist2008-03-24-18-50-34/ResultDir/b4477225
/net/sqenfs-1.sfbay/export1/comp/vm/misc/results/vm/gtee/JDK_PERFORMANCE/PROMOTION/VM/6u5p/2008-03-21/AggressiveOpts/vm/solaris-sparc/server/comp/vm-solaris-sparc_server_comp_nsk.regression.testlist2008-03-24-18-50-34/ResultDir/b4675027
/net/sqenfs-1.sfbay/export1/comp/vm/misc/results/vm/gtee/JDK_PERFORMANCE/PROMOTION/VM/6u5p/2008-03-21/AggressiveOpts/vm/solaris-sparc/server/comp/vm-solaris-sparc_server_comp_vm.regression.testlist2008-03-24-19-16-54/ResultDir/CollationKeyTest/
Posted Date : 2008-03-28 16:31:43.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
The failures of
nsk/jdwp/ReferenceType/ConstantPool/constantPool001
nsk/logging/Handler/getEncoding/gtencd001
nsk/logging/Handler/getEncoding/gtencd002
nsk/logging/Handler/setEncoding/stencd001
nsk/logging/StreamHandler/setEncoding/setencod001
regression/jit/4131426/CollationKeyTest
nsk/regression/b4477225
are duplicates of 6636352 but nsk/regression/b4675027 is a new one caused by EA. EA takes about 10 minutes for one of the methods which makes the test timeout. So this bug is only about the failure of b4675027 since the others have been fixed under 6636352.
Posted Date : 2008-04-01 18:20:51.0
C2 spends > 60% in escape Analysis code during test nsk/regression/b4675027.
Most of the time it spends in ConnectionGraph::remove_deferred().
Posted Date : 2008-04-02 21:46:45.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |