6681577: PIT: some VM tests fails with -XX:+AggressiveOpts in 6u5p b01

C2 spends > 60% in escape analysis code during test nsk/regression/b4675027.

Reviewed-by: never